随机抽取翻译

--- a/OEBPS/Text/c021.xhtml
+++ b/OEBPS/Text/c021.xhtml
@@ -76,7 +76,7 @@
     <p>突然，从出口中听到了从未有过的某人的声音。</p>
     <p>如果把目光转向那里，桃色的头发的女性朝向着伯恩哈特跑着。</p>
     <p>年龄在二十岁前半……当然因为是吸血鬼外表年龄完全不可靠。</p>
-    <p>既然安详地和柏林哈尔特交谈，那肯定不是单纯的贵族。</p>
+    <p>既然安详地和伯恩哈特交谈，那肯定不是单纯的贵族。</p>
     <p>“<span class="character">母亲，这里很危险！请逃走！</span>”</p>
     <p>菲利克斯面向女性呼喊的事明白了她的原形。</p>
     <p>原来如此，菲利克斯的母亲……也就是说，你是正妻吗？那样的话对伯恩哈特的态度也能理解。</p>
