--- a/OEBPS/Text/c022.xhtml
+++ b/OEBPS/Text/c022.xhtml
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1>22. 扭曲的父子</h1>
+    <h1>22. 扭曲的父女</h1>
     <p>梅赛德斯注意到魔法发动时不用手等给予指向性也能发动，是在练习时自己施加重力的时候。</p>
     <p>所谓魔法通常给人一种从手中发出的印象。梅赛德斯也不例外，因为前世所看到的虚构等影响，误认为是自然和手等给予方向性的东西。</p>
     <p>但是不是那样的话自己学会了魔法才注意到。</p>
@@ -116,7 +116,7 @@
     <p>的确，梅赛德斯也陷入了一种错觉，就好像看到伯恩哈特时看到了镜子一样。</p>
     <p>这个男人是自己的同类，用本能理解了。</p>
     <p>虽然是令人讨厌的事情，但因为本来就很像，而且还继承了血缘吧。</p>
-    <p>不得不承认，梅赛德斯和伯恩哈特是父子。</p>
+    <p>不得不承认，梅赛德斯和伯恩哈特是父女。</p>
     <p>“今后一起生活吧，我的孩子啊。</p>
     <p>你才是我所寻求的、我的继承人”</p>
     <p>“像这样突然被退回手掌，我答应它吗？</p>
