--- a/OEBPS/Text/c023.xhtml
+++ b/OEBPS/Text/c023.xhtml
@@ -19,7 +19,7 @@
     <p>到现在根据自学和梅赛德斯自己的感觉很好地能弄,不过，今后也不一定很好地去。</p>
     <p>另外，虽然总有一天会离开这个城市，但是不知道外面会变成什么样子，还是没有知识。</p>
     <p>以那个状态出去，也有迷宫想办法变成。</p>
-    <p>也有成为zuveru这个可靠的顾问。</p>
+    <p>也有茨瓦尔夫这个可靠的顾问。</p>
     <p>但是，即便如此，还是不知道和不知道是不同的。</p>
     <p>更何况，如果只是自己出去的话很容易，但问题是玛吉特和老婆子。</p>
     <p>我不认为能忍受长途旅行，至于玛吉特的母亲，我中途就退休了。</p>
@@ -42,7 +42,7 @@
     <p>扭倒打算出去的女儿，硬使之背负格鲁内瓦特的名字。</p>
     <p>正因为有这样的自负，才承认女儿的淘气。</p>
     <p>并且万一女儿超越了自己，那个才是本愿。</p>
-    <p>这意味着继续追求的后继的完成，即使女儿舍弃了古鲁内瓦尔特的名字，也舍不得继承自己的血统。</p>
+    <p>这意味着继续追求的后继的完成，即使女儿舍弃了格鲁内瓦特的名字，也舍不得继承自己的血统。</p>
     <p>自己的血以更好的形式残留。那就好。超越给你看，如果可以的话。</p>
     <p>也就是说这是——从一开始就决裂是大前提的一时的和睦！</p>
     <p>女儿一手拿着刀，一边宣言总有一天会背叛父亲，父亲一边说着要扭倒女儿一边抱着女儿。</p>
@@ -80,7 +80,7 @@
     <p>嘛，地球上中世纪的时候到处都在打仗，没什么不可思议的。</p>
     <p>日本直到德川幕府建成为止，也始终处于某处发动战争的状态。</p>
     <p>到现在为止梅赛德斯称自己生活的国家为『吸血鬼的国家』,不过，这个完全不是正确的表现。</p>
-    <p>这个国家正式名称叫『oruxu』，是位于西方的吸血鬼的大国。</p>
+    <p>这个国家正式名称叫『奥鲁克斯』，是位于西方的吸血鬼的大国。</p>
     <p>而且这个城市是奥尔克斯最大的城市，其规模也超过了王都。</p>
     <p>统治包括这个城市在内的广大土地的是格鲁内瓦特家。</p>
     <p>但是并不是只有奥尔克斯是吸血鬼的国家，在这个泰尔海纳大陆其他也存在着几个吸血鬼的国家，没有被统一互相使之发挥着眼光的状态。</p>
