--- a/OEBPS/Text/c025.xhtml
+++ b/OEBPS/Text/c025.xhtml
@@ -54,7 +54,7 @@
     <p>“<span class="character">应该不会拒绝。无论如何，拜托了</span>”</p>
     <p>“<span class="character">好。那么从今天开始你的名字就是舒夫</span>”</p>
     <p>不用说名字的由来，主要取自于丈夫。</p>
-    <p>因为贝赛德蒙看起来像主夫一样有意义地照顾梅赛德斯父子，所以就那样简单地命名为舒夫。</p>
+    <p>因为贝赛德蒙看起来像主夫一样有意义地照顾梅赛德斯父女，所以就那样简单地命名为舒夫。</p>
     <p>不变地扭转决定直线直球的是梅赛德斯的命名感觉。</p>
     <p>“<span class="character">舒夫……那个名字，确实铭刻在心。感谢您为我取名</span>”</p>
     <p>“<span class="character">恩。今后也请多多指教</span>”</p>
