--- a/OEBPS/Text/c032.xhtml
+++ b/OEBPS/Text/c032.xhtml
@@ -15,7 +15,7 @@
     <p>“<span class="character">继承……是吗？</span>”</p>
     <p>梅赛德斯反复回味父亲的话语，伯恩哈特静静地点了点头。</p>
     <p>迷宫是攻略者的所有物，据说也可以用来继承这血统的人。</p>
-    <p>并且能使用迷宫的事是arventroto的正当的继任者的事证明，这个是oruxu最大的军事力。</p>
+    <p>并且能使用迷宫的事是arventroto的正当的继任者的事证明，这个是奥鲁克斯最大的军事力。</p>
     <p>如果失去这个，奥尔克斯的战力会变成一半以下吧。</p>
     <p>“对了。还没成为国家的无法无天的时代……被称为『最初的八人』的人们攻略了迷宫，各自得到了迷宫的支配权。</p>
     <p>两个精灵，两个吸血鬼，两个希梅雷，两个佛格拉.</p>
