--- a/OEBPS/Text/c036.xhtml
+++ b/OEBPS/Text/c036.xhtml
@@ -17,7 +17,7 @@
     <p>从星期六开始，经过水、风、火、铁、冰、雷最后绕太阳一周。</p>
     <p>对于前世习惯于周七的梅赛德斯来说，这实在是有些不协调感，但因为是这个国家的文化，所以只能接受了。</p>
     <p>太阳在精灵和佛格拉的国家被认为是一周的开始,不过，阳光出来的早上对吸血鬼来说是睡觉的时间。</p>
-    <p>因此，这个oruxusu一周的开始是土，阳是休息日。</p>
+    <p>因此，这个奥鲁克斯一周的开始是土，阳是休息日。</p>
     <p>在学园里，阳天也是休息日，梅赛德斯利用这个假期回到了格鲁内瓦特府邸。</p>
     <p>如果以平时的空中短跑能返回轻松,不过，此次因为吉克哈特也在，阿修塔尔请努力了。</p>
     <p>到达房子的吉克哈特们被送到客厅，只有梅赛德斯被叫到伯恩哈特的私人房间。</p>
@@ -39,10 +39,10 @@
     <p>“<span class="character">然后……果然现在的王家是虚假的吧？</span>”</p>
     <p>“是的。新王派希望成为障碍的吉克林德公主的死，向他国好象卖了信息。</p>
     <p>的确……贝亚特里克斯帝国什么的”</p>
-    <p>“真是和我国并列的吸血鬼大国啊。据说第一代女帝贝阿朵里克斯称霸了迷宫，建立了国家。</p>
-    <p>如果奥克思体弱化，不久被那个国家吸收的事吧。</p>
-    <p>即便如此，为了自己的地位而出卖国家，还是……这个必须赶紧去除。</p>
-    <p>……自称王的卖国贼们”</p>
+    <p>“<span class="character">真是和我国并列的吸血鬼大国啊。据说第一代女帝贝阿朵里克斯称霸了迷宫，建立了国家。</span></p>
+    <p><span class="character">如果奥克思体弱化，不久被那个国家吸收的事吧。</span></p>
+    <p><span class="character">即便如此，为了自己的地位而出卖国家，还是……这个必须赶紧去除。</span></p>
+    <p><span class="character">……自称王的卖国贼们</span>”</p>
     <p>伯恩哈特用从心底侮蔑的语调断定新王是卖国贼。</p>
     <p>如果其他贵族听到的话肯定会怀疑自己的耳朵吧。</p>
     <p>“<span class="character">但是很麻烦……新王虽然不是王家的血统，但作为王这件事本身并不虚伪</span>”</p>
@@ -54,7 +54,7 @@
     <p>要颠覆这一点，只能在他们不能使用王剑的情况下让吉克林德使用王剑。</p>
     <p>这样一来，就能够突破以吉克林德为旗头的政变。</p>
     <p>照现在这样下去，我们没有正当性。</p>
-    <p>“不……等一下？行吗？</p>
+    <p>“<span class="character">不……等一下？行吗？</span></p>
     <p>伯恩哈特想到了什么，用手捂着下巴思考。</p>
     <p>关于贵族和王族的事，他压倒性地详细。</p>
     <p>正因为梅赛德斯也指望着梅赛德斯，所以来到了这里。</p>
@@ -73,8 +73,8 @@
     <p>所以他们还能坐上王座。</p>
     <p>但是那些孩子一次也没有用过王剑。</p>
     <p>伯恩哈特认为这里有可以进入的空隙。</p>
-    <p>“下次的生日祭……你们要烧掉几个**贵族吗？对现在的王感到不满的家伙有很多。</p>
-    <p>如果做得好的话，说不定能在那里全部暴露”</p>
+    <p>“<span class="character">下次的生日祭……你们要烧掉几个**贵族吗？对现在的王感到不满的家伙有很多。</span></p>
+    <p><span class="character">如果做得好的话，说不定能在那里全部暴露</span>”</p>
     <p>“<span class="character">如果不顺利的话？</span>”</p>
     <p>“<span class="character">那时只是对王家的不满高涨而已。只要你用王剑，我就不会消除对那些家伙的不信任</span>”</p>
     <p>伯恩哈特这样说道，就把嘴角吊了起来。</p>
