--- a/OEBPS/Text/c037.xhtml
+++ b/OEBPS/Text/c037.xhtml
@@ -21,20 +21,20 @@
     <p>这样的话就足够了。没有真正的王剑，也会出现在这里。</p>
     <p>而且还方便。本来应该显示王剑力量的这个场合带来了假货的事自己已经，说着自己们不能使用也同样。</p>
     <p>（茨瓦尔夫。你们能分辨出万能钥匙和不是万能钥匙吗？）</p>
-    <p>《YES，主人。但如果注视，附有所说的条件。</p>
-    <p>一瞬间横穿了眼前的程度恐怕不会注意到”</p>
+    <p>《<span class="character">YES，主人。但如果注视，附有所说的条件。</span></p>
+    <p><span class="character">一瞬间横穿了眼前的程度恐怕不会注意到</span>》</p>
     <p>杜威尔夫能分辨主人钥匙是很大的优点。</p>
-    <p>同时，如果这个事件背面的迷宫主人附有象tsuveru一样的向导，这边有被看破的可能性。</p>
+    <p>同时，如果这个事件背面的迷宫主人附有象茨瓦尔夫一样的向导，这边有被看破的可能性。</p>
     <p>虽然这么说，但是如果没有‘那可能是万能钥匙’的疑问的话，也不会去关注，所以在擦肩而过的程度上不会注意到。</p>
     <p>梅赛德斯回顾过去，认为恐怕没有人发现自己是迷宫主人。</p>
     <p>因为出去的时候经常以待机模式放入口袋中，假设错过了中迷宫主人在也不被判别。</p>
     <p>在台上，国王般肥胖的吸血鬼谈论着国家的将来总觉得贵族的骄傲，采取着贵族们表面上听得入迷的态度。</p>
     <p>话刚说完，一个贵族就叫了起来。</p>
-    <p>“王。为何你从十一年前开始在我们面前不使用王剑。</p>
-    <p>为什么不显示我国，奥克思不变的权威和力量的象征呢？</p>
-    <p>我们始终敬爱着第一代艺术巡回王的丰功伟绩，为历经世代不变的忠诚奉献。</p>
-    <p>请再一次向我们展示王的威光”</p>
-    <p>那是柏林哈尔特焚烧过的**贵族吧。</p>
+    <p>“<span class="character">王。为何你从十一年前开始在我们面前不使用王剑。</span></p>
+    <p><span class="character">为什么不显示我国，奥克思不变的权威和力量的象征呢？</span></p>
+    <p><span class="character">我们始终敬爱着第一代艺术巡回王的丰功伟绩，为历经世代不变的忠诚奉献。</span></p>
+    <p><span class="character">请再一次向我们展示王的威光</span>”</p>
+    <p>那是伯恩哈特焚烧过的**贵族吧。</p>
     <p>正如他所赞同，其他贵族也乘便说“是的”。</p>
     <p>正如以前所说，对于吸血鬼来说，强大才是胜过任何事物的地位。</p>
     <p>如果没有在十一年前表现出来，无论是王还是什么，都会采取这样的态度。</p>
@@ -48,10 +48,10 @@
     <p>那把王剑是假的。所以一直以为会很慌张，但那份从容又是怎么回事呢？</p>
     <p>对批判的贵族们来说也是意外的事吧。</p>
     <p>声音变小了，好像被气压了一样，全体人员都面面相觑。</p>
-    <p>“众所周知，我不是王家的血统。</p>
-    <p>但是，我们的孩子都是死前的妻子……继承了艾尔弗里德的血统。</p>
-    <p>虽然也有人怀疑……现在让我们看看，证明我们的孩子是真正与王家相连的人。</p>
-    <p>然后我想以此来消除我的疑惑”</p>
+    <p>“<span class="character">众所周知，我不是王家的血统。</span></p>
+    <p><span class="character">但是，我们的孩子都是死前的妻子……继承了艾尔弗里德的血统。</span></p>
+    <p><span class="character">虽然也有人怀疑……现在让我们看看，证明我们的孩子是真正与王家相连的人。</span></p>
+    <p><span class="character">然后我想以此来消除我的疑惑</span>”</p>
     <p>国王一边施加夸张的手势一边演说，巴尔多拔出了剑。</p>
     <p>用假货究竟打算做什么……。</p>
     <p>虽然这么想着，但还是观察着梅赛德斯，看到台上散发出的强烈光芒，不由得闭上了眼睛。</p>
@@ -75,8 +75,8 @@
     <p>为了不允许，这个国家的选民们这个目击者是不可缺少的。</p>
     <p>建议，主人</p>
     <p>（什么？）</p>
-    <p>“万能钥匙是不能破坏的・・・・是用金属做的。</p>
-    <p>据说王剑也是同样不会损坏的金属，如果剑在这里坏掉的话会产生矛盾，引起贵族们的疑虑吧”</p>
+    <p>“<span class="character">万能钥匙是不能破坏的・・・・是用金属做的。</span></p>
+    <p><span class="character">据说王剑也是同样不会损坏的金属，如果剑在这里坏掉的话会产生矛盾，引起贵族们的疑虑吧</span>”</p>
     <p>（原来如此）</p>
     <p>梅赛德斯确认了所有人的眼睛都朝着台上，发动了魔法。</p>
     <p>对波罗多尔持有的剑施加重压，尝试了破坏。</p>
@@ -93,36 +93,36 @@
     <p>贵族们对万一的事态吵闹，疑念增强。</p>
     <p>巴鲁多和国王脸色发青，但为了寻找破坏了这次披露的粗暴者，他打算大声呐喊。</p>
     <p>但是有一个比那个更早行动的男人。</p>
-    <p>“王啊！这是怎么回事！</p>
-    <p>王剑应该是一把永不破碎的剑，但为何要破碎！</p>
-    <p>然后，那些魔物为什么一直跪着呢！？</p>
-    <p>如果王剑控制了魔物，那么在失去它的现在，魔物们为什么不暴走！”</p>
+    <p>“<span class="character">王啊！这是怎么回事！</span></p>
+    <p><span class="character">王剑应该是一把永不破碎的剑，但为何要破碎！</span></p>
+    <p><span class="character">然后，那些魔物为什么一直跪着呢！？</span></p>
+    <p><span class="character">如果王剑控制了魔物，那么在失去它的现在，魔物们为什么不暴走！</span>”</p>
     <p>在伯恩哈特。</p>
     <p>他把此视为良机，一气呵成发动了攻击。</p>
     <p>当然是危险的赌博。</p>
     <p>如果一步走错就会被当作无礼者而被抓住，这比什么都不敬。</p>
     <p>但是，伯恩哈特中并没有对王的敬意和忠诚，因为这里是责备的时候，所以只不过是行动了。</p>
-    <p>“王啊，请让我听一下。那个魔物……真的由王剑叫出来的吗？</p>
-    <p>捕获的魔物不只是用某种手段隐藏着吗！？”</p>
+    <p>“<span class="character">王啊，请让我听一下。那个魔物……真的由王剑叫出来的吗？</span></p>
+    <p><span class="character">捕获的魔物不只是用某种手段隐藏着吗！？</span>”</p>
     <p>伯恩哈特是确信的。</p>
     <p>自己的想法还是正确的。</p>
     <p>我确信那个王族是假的，没有继承王家的血统。</p>
     <p>如果不是那样的话，就不会特意准备假王剑了。</p>
-    <p>“你，你，伯恩哈特爵士！无礼啊！</p>
-    <p>你把我们……你怀疑我是王吗！”</p>
-    <p>“呼……没有怀疑。只是确信了。</p>
-    <p>果然我的疑虑是正确的……不，在这里的大家应该也是这样想的。</p>
-    <p>现在的王族是真货吗！”</p>
+    <p>“<span class="character">你，你，伯恩哈特爵士！无礼啊！</span></p>
+    <p><span class="character">你把我们……你怀疑我是王吗！</span>”</p>
+    <p>“<span class="character">呼……没有怀疑。只是确信了。</span></p>
+    <p><span class="character">果然我的疑虑是正确的……不，在这里的大家应该也是这样想的。</span></p>
+    <p><span class="character">现在的王族是真货吗！</span>”</p>
     <p>“<span class="character">き、貴様……</span>”</p>
-    <p>“王是养老女婿。王妃是从哪里带来的马骨。</p>
-    <p>除了吉克林德公主以外，都是前妃死后突然出现的，明显不自然的人。</p>
-    <p>就连那个吉克林德公主也明显足:被偷换了的冒牌货。</p>
-    <p>对于十一年中从未有过的王家的威光，伪王剑是极致的”</p>
+    <p>“<span class="character">王是养老女婿。王妃是从哪里带来的马骨。</span></p>
+    <p><span class="character">除了吉克林德公主以外，都是前妃死后突然出现的，明显不自然的人。</span></p>
+    <p><span class="character">就连那个吉克林德公主也明显足:被偷换了的冒牌货。</span></p>
+    <p><span class="character">对于十一年中从未有过的王家的威光，伪王剑是极致的</span>”</p>
     <p>伯恩哈特瞪着王，用手指戳着。</p>
     <p>与此同时，在会场上武装的士兵们陷入雪崩，准备了武器。</p>
     <p>大概，是伯恩哈特使之待命的他的私人兵。</p>
-    <p>“告发！你是污秽王家的正当的血统，成为王家的大罪人！</p>
-    <p>现在在我们面前的是欺骗伟大的王国之名的不道德之人啊！起来吧！起来吧！”</p>
+    <p>“<span class="character">告发！你是污秽王家的正当的血统，成为王家的大罪人！</span></p>
+    <p><span class="character">现在在我们面前的是欺骗伟大的王国之名的不道德之人啊！起来吧！起来吧！</span>”</p>
     <p>这是毫无疑问的——被称为政变的行为。</p>
 </body>
 
