--- a/OEBPS/Text/c038.xhtml
+++ b/OEBPS/Text/c038.xhtml
@@ -105,20 +105,20 @@
     <p>但是，只有黄金的瞳孔凝视着这边，我明白了。</p>
     <p>宛如尘埃般冰冷的四只眼，激发了伊扎克的恐怖。</p>
     <p>刚才还以为“完全不像”……就好像看东西一样，只有那双眼睛是如此相似。</p>
-    <p>“怎么了？你在害怕什么？</p>
-    <p>立，国王。你只要成为王，就必须站起来”</p>
+    <p>“<span class="character">怎么了？你在害怕什么？</span></p>
+    <p><span class="character">站起来，国王。你只要成为王，就必须站起来</span>”</p>
     <p>伯恩哈特一边走一边说。</p>
     <p>立。站起来战斗吧。</p>
     <p>宣告战死。</p>
-    <p>“这是甚至卖掉国家都得到的地位吧？那么至少试着紧紧抱住它吧。</p>
-    <p>下众就要显示下众的矜持。意气用事”</p>
+    <p>“<span class="character">这是甚至卖掉国家都得到的地位吧？那么至少试着紧紧抱住它吧。</span></p>
+    <p><span class="character">下众就要显示下众的矜持。意气用事</span>”</p>
     <p>梅赛德斯站在王面前，命令他进行最后的抵抗。</p>
     <p>我已经知道这个王是小物件了。但是，被这种劣于尘埃的小物件称为人女的吉克林德真可怜。</p>
     <p>所以我想至少要让大家看到稍微好一点的样子。</p>
     <p>不仅仅是颤抖着停下来的尘埃，如果是抱有同样意志的坏蛋的话，还能得到一点安慰吧。</p>
-    <p>“……求您、求……拜托……做某事。</p>
-    <p>什么都……我什么都听你的……妻子和孩子都送给你……。</p>
-    <p>所以……所以无论如何，只有我的生命……”</p>
+    <p>“<span class="character">……求您、求……拜托……做某事。</span></p>
+    <p><span class="character">什么都……我什么都听你的……妻子和孩子都送给你……。</span></p>
+    <p><span class="character">所以……所以无论如何，只有我的生命……</span>”</p>
     <p>但是从嘴里说出的不是期望的话，而是无论到哪里都让人失望的卑鄙的生命。</p>
     <p>梅赛德斯和伯恩哈特同时咂嘴，那双眼睛染上了侮辱。</p>
     <p>就是这样的东西吗？真的是这种程度的三下——不，不到三下的尘埃吗？</p>
