--- a/OEBPS/Text/c039.xhtml
+++ b/OEBPS/Text/c039.xhtml
@@ -52,8 +52,8 @@
     <p>可是正因为如此不能理解。</p>
     <p>伯恩哈特的姐姐为什么会在这个时机妨碍我？</p>
     <p>“<span class="character">让我听听吧。为什么旧王派・・・是你要庇护那个家伙？</span>”</p>
-    <p>“如果你们在这里处理这只猪，我的辛劳就化为泡影。</p>
-    <p>你以为我是为了什么特地偷走了王剑的？”</p>
+    <p>“<span class="character">如果你们在这里处理这只猪，我的辛劳就化为泡影。</span></p>
+    <p><span class="character">你以为我是为了什么特地偷走了王剑的？</span>”</p>
     <p>“<span class="character">原来如此，我特地准备了假王剑，还想干什么，原来是你的错。</span>”</p>
     <p>王子拿着伪王剑的理由。那是因为它被简单的偷换了。</p>
     <p>他们拿着的剑，是汉娜偷换的冒牌货。</p>
@@ -152,18 +152,18 @@
     <p>“<span class="character">为什么只取名字呢！？</span>”</p>
     <p>梅赛德斯虽然在喊什么，但还是忽略了。</p>
     <p>实际上是伯母，所以那样称呼也不会有什么错。</p>
-    <p>“啊……嘛，梅赛德斯呢……对不起，我有点怀疑。</p>
-    <p>因为冷静得让人想不到是11岁，很奇怪。</p>
-    <p>我以为是接受了特殊训练的工作人员。</p>
-    <p>而且……”</p>
+    <p>“<span class="character">啊……嘛，梅赛德斯呢……对不起，我有点怀疑。</span></p>
+    <p><span class="character">因为冷静得让人想不到是11岁，很奇怪。</span></p>
+    <p><span class="character">我以为是接受了特殊训练的工作人员。</span></p>
+    <p><span class="character">而且……</span>”</p>
     <p>至此，汉娜看见了伯恩哈特。</p>
     <p>感觉是在犹豫该不该说。</p>
     <p>这么说来……她目击了梅赛德斯发出魔物的瞬间。</p>
     <p>恐怕就是这样，他开始怀疑自己是不是贝阿列克斯帝国的迷宫所有者。</p>
-    <p>“而且……提起伯恩哈特的孩子，只有菲利克斯和被放置在隔壁的孩子们吧？</p>
-    <p>我没想过伯恩哈特让菲利克斯以外的人去学校。</p>
-    <p>所以才叫格鲁内瓦特家的工作人员吧……。</p>
-    <p>但是，梅赛德斯的脸和伯恩哈特不像，氛围什么的完全一样，所以更加混乱了……”</p>
+    <p>“<span class="character">而且……提起伯恩哈特的孩子，只有菲利克斯和被放置在隔壁的孩子们吧？</span></p>
+    <p><span class="character">我没想过伯恩哈特让菲利克斯以外的人去学校。</span></p>
+    <p><span class="character">所以才叫格鲁内瓦特家的工作人员吧……。</span></p>
+    <p><span class="character">但是，梅赛德斯的脸和伯恩哈特不像，氛围什么的完全一样，所以更加混乱了……</span>”</p>
     <p>“<span class="character">呼。因为是我的女儿嘛，当然长得很像</span>”</p>
     <p>“<span class="character">哇，我第一次看到这么高兴的伯恩哈特。</span>”</p>
     <p>最终，汉娜避开了魔物的话题，换成了别的话题。</p>
