--- a/OEBPS/Text/c040.xhtml
+++ b/OEBPS/Text/c040.xhtml
@@ -121,7 +121,7 @@
     <p>因此，他冒着暴露的假名，毫不隐瞒地显示着能力。</p>
     <p>说起来食物……为了钓上来名为自己的鱼……啊！</p>
     <p>“<span class="character">格鲁内瓦特？那真是个大贵族啊……</span>”</p>
-    <p>“<span class="character">不凑巧我和四子。没必要继承家业</span>”</p>
+    <p>“<span class="character">不凑巧我是四子。没必要继承家业</span>”</p>
     <p>尝试着探索了一下，但对于那个回答没有迷惑。</p>
     <p>但这也是谎言。</p>
     <p>说到四子，确实是琉迪亚的孩子。</p>
@@ -191,7 +191,7 @@
     <p>“<span class="character">是的。那年十一岁</span>”</p>
     <p>“<span class="character">……明明是被放置在侧室的孩子，成绩第一吗？</span>”</p>
     <p>“<span class="character">明明是被放置在侧室里的孩子却成绩第一。</span>”</p>
-    <p>“也就是说什么？梅赛德斯桑真的只:是，不像十一岁的十一岁，没有受过良好的教育却取得了学园第一的成绩的菲利克斯君是个泪眼很厉害的孩子，虽然没有接受训练，但比A级seeker更强，更能驯服魔鬼能做到的事，只是皮肤和头发的光泽不可能的那样好，怎么考虑也过分,不过，尽管如此真的只是没有背面的孩子吗？</p>
+    <p>“<span class="character">也就是说什么？梅赛德斯桑真的只:是，不像十一岁的十一岁，没有受过良好的教育却取得了学园第一的成绩的菲利克斯君是个泪眼很厉害的孩子，虽然没有接受训练，但比A级seeker更强，更能驯服魔鬼能做到的事，只是皮肤和头发的光泽不可能的那样好，怎么考虑也过分,不过，尽管如此真的只是没有背面的孩子吗？</span></p>
     <p>“<span class="character">原来是这样啊</span>”</p>
     <p>汉娜接到部下的报告，仰望天空。</p>
     <p>不可能。怎么想也是不可能的。</p>
