--- a/OEBPS/Text/c041.xhtml
+++ b/OEBPS/Text/c041.xhtml
@@ -47,7 +47,7 @@
     <p>吉克林德流着泪那样高兴的理由，到艾尔弗里德感动得流泪抱紧女儿的心情，完全不明白。</p>
     <p>因为就像初次见面一样吧？是今天第一次见面的吧？</p>
     <p>因此不能理解为何哭的那样高兴。</p>
-    <p>这一定就是所谓的爱吧。因为二人用坚固的父子之爱被系结着，实质上初次见面也到那里能感到喜悦。</p>
+    <p>这一定就是所谓的爱吧。因为二人用坚固的亲子之爱被系结着，实质上初次见面也到那里能感到喜悦。</p>
     <p>但是梅赛德斯并不是这样。</p>
     <p>第一次和父亲见面的时候完全没有喜悦，只是觉得‘啊，那是父亲吗’。</p>
     <p>吉克林德和母亲的见面，就像是看到了自己内心的缺陷一样，很不愉快。</p>
@@ -82,22 +82,22 @@
     <p>出狱的同时是王……不，已经不是国王了，应该叫名字吧。</p>
     <p>伊扎克巡回演出用简直象迎接自己的孩子一样的声音迎接了基林顿。</p>
     <p>同行的伯恩哈特和梅赛德斯惊呆了。</p>
-    <p>“你很恨我吧。这是没办法的事。</p>
-    <p>但是女儿啊，一切都是考验。</p>
-    <p>你是否真的能成为王……为了看清那个，我敢对你严厉地对待。</p>
-    <p>但是你跨越了这个障碍。父亲很高兴”</p>
+    <p>“<span class="character">你很恨我吧。这是没办法的事。</span></p>
+    <p><span class="character">但是女儿啊，一切都是考验。</span></p>
+    <p><span class="character">你是否真的能成为王……为了看清那个，我敢对你严厉地对待。</span></p>
+    <p><span class="character">但是你跨越了这个障碍。父亲很高兴</span>”</p>
     <p>伊扎克一边说着装腔作势的事，一边紧紧抓住铁栅栏。</p>
     <p>梅赛德斯对她的样子只能感到厌恶。</p>
     <p>心里甚至觉得脏乎乎的。</p>
     <p>这个男人背叛了王妃，背叛了国民，夺取了王家，这次甚至背叛了现在的妻子和孩子们。</p>
-    <p>“首先让我们解开误会吧！</p>
-    <p>现在，为了你而将心魔鬼化作度过的苦闷的11年，向你诉说……”</p>
+    <p>“<span class="character">首先让我们解开误会吧！</span></p>
+    <p><span class="character">现在，为了你而将心魔鬼化作度过的苦闷的11年，向你诉说……</span>”</p>
     <p>梅赛德斯无言地把踢进伊扎克的脸上。</p>
-    <p>“<span class="character">嘿嘿！？</span>”</p>
+    <p>“<span class="character">嘎嘿！？</span>”</p>
     <p>鼻子折断，牙齿折断，与血飞沫一起破碎的牙齿在空中飞舞。</p>
     <p>伊扎克肥胖的身体一击就被打飞到墙边，墙壁上有蜘蛛网状的裂痕。</p>
     <p>“<span class="character">梅赛德斯</span>”</p>
-    <p>“因为刺耳，所以让他沉默了。有什么问题吗？</p>
+    <p>“<span class="character">因为刺耳，所以让他沉默了。有什么问题吗？</span></p>
     <p>“<span class="character">啊</span>”</p>
     <p>伯恩哈特说要责备梅赛德斯——下一个瞬间，用魔法产生的铁枪刺到伊扎克的脸颊，从嘴里飞了出来。</p>
     <p>伊扎克被枪举到空中，因过度的剧痛而哭着挣扎着。</p>
@@ -106,12 +106,12 @@
     <p>看着那个景象，吉克林德脸色发青，汉娜苦笑起来。</p>
     <p>犯了大罪,不过，尽管如此牢中的那个男人姑且，算真的王。</p>
     <p>如此毫不犹豫的攻击，让人冒冷汗也是没办法的事。</p>
-    <p>“<span class="character">怎么说呢……真是父子俩啊</span>”</p>
+    <p>“<span class="character">怎么说呢……真是父女俩啊</span>”</p>
     <p>汉娜坦率地说出了自己的想法。</p>
     <p>伯恩哈特对这句话乍一看毫无表情，但嘴角却扭曲得让人忍不住笑了。</p>
     <p>另一方面，梅赛德斯露出了露骨的厌恶表情。</p>
-    <p>“伊扎克。你所犯的罪行就等同于卖掉这个国家，是不被允许的行为。</p>
-    <p>法院判决后，贵方一家在国内盘旋后处以火炙刑”</p>
+    <p>“<span class="character">伊扎克。你所犯的罪行就等同于卖掉这个国家，是不被允许的行为。</span></p>
+    <p><span class="character">法院判决后，贵方一家在国内盘旋后处以火炙刑</span>”</p>
     <p>就好像知道结果一样的说法。</p>
     <p>真奇怪。虽说是提交审判，但之后的处刑方法也已经决定了。</p>
     <p>但是这里是中世纪文明停止的吸血鬼之国。</p>
@@ -120,10 +120,10 @@
     <p>既然如此，以能与国王匹敌的权威而自豪的公爵伯恩哈特掌握权力不是件难事，应该认为他已经连根基都做完了。</p>
     <p>就连与法官的商谈也应该早就结束了。</p>
     <p>那里有中世纪文明的黑暗社会。</p>
-    <p>“这是因为情报全部泄露之后，呢。</p>
-    <p>这次的一件事，主犯虽然是这个男人，但并不是一个人能做到的事情。</p>
-    <p>除了这个男人以外，贝亚特里克斯帝国的舞蹈中，应该还有好几个傻瓜贵族在帮助他们。</p>
-    <p>这可是把国家腐败都从白薯中抽出来的好机会，在情报泄露之前被杀掉可受不了”</p>
+    <p>“<span class="character">这是因为情报全部泄露之后，呢。</span></p>
+    <p><span class="character">这次的一件事，主犯虽然是这个男人，但并不是一个人能做到的事情。</span></p>
+    <p><span class="character">除了这个男人以外，贝亚特里克斯帝国的舞蹈中，应该还有好几个傻瓜贵族在帮助他们。</span></p>
+    <p><span class="character">这可是把国家腐败都从白薯中抽出来的好机会，在情报泄露之前被杀掉可受不了</span>”</p>
     <p>虫子靠近甜蜜。</p>
     <p>伊扎克害怕暴露自己的真面目。</p>
     <p>因为如果是正经人，知道他的真面目就会厌恶，想要从王座上攻下来。</p>
@@ -132,11 +132,11 @@
     <p>所以在伊扎克的周围，到处都是被眼前的蜜吊着的苍蝇。</p>
     <p>但是，仅限于这样的苍蝇，在自我保护这一点上就会产生坏主意，混入正经的贵族之中。</p>
     <p>为了一网打尽那些，消除国家的腐败，还要让伊扎克去死。</p>
-    <p>“这个男的犯了大罪，终于可以堂堂正正的询问了。</p>
-    <p>处刑能等到那么久吗？”</p>
+    <p>“<span class="character">这个男的犯了大罪，终于可以堂堂正正的询问了。</span></p>
+    <p><span class="character">处刑能等到那么久吗？</span>”</p>
     <p>“<span class="character">那我来问问吧。</span>”</p>
-    <p>“不行啊。伯恩哈特，你不擅长这样吧。</p>
-    <p>如果交给你的话，我就变成只会说‘请杀了我’的肉人偶”</p>
+    <p>“<span class="character">不行啊。伯恩哈特，你不擅长这样吧。</span></p>
+    <p><span class="character">如果交给你的话，就会变成只会说‘请杀了我’的肉人偶</span>”</p>
     <p>在监狱里的伊扎克对二人进行着可怕的对话，脸色苍白。</p>
     <p>无论外表多么可爱的少女，内在却活了百年以上，在黑社会中潜入修罗场的女人。</p>
     <p>拷问和背地交易等是理所当然的。事到如今不问手段的善恶。</p>
@@ -149,12 +149,12 @@
     <p>我甚至深思着什么样的发言能赢得她的信任。</p>
     <p>如果在这里奇怪地讨吉克林德的不快今后会变得难得相处的。</p>
     <p>那么，在这里，让大家看到稍微走近一点的姿势最终会有利吧。</p>
-    <p>“原来如此，不愧是公主。我非常佩服那些夺走自己生活的人们的慈悲。</p>
-    <p>那就这样吧。伊撒克的孩子们放逐边境，从事奴隶劳动”</p>
+    <p>“<span class="character">原来如此，不愧是公主。我非常佩服那些夺走自己生活的人们的慈悲。</span></p>
+    <p><span class="character">那就这样吧。伊撒克的孩子们放逐边境，从事奴隶劳动</span>”</p>
     <p>“<span class="character">喂，是奴隶吗……</span>”</p>
     <p>“<span class="character">在此，如果让大家看到你悔改罪责、认真工作的姿态的话，我们也会考虑回归社会。怎么样？当然，为了不考虑叛乱，还是会派人监视的</span>”</p>
-    <p>“呜、む……是啊。如果还残留着复归的可能性，还是好的一方吗……。</p>
-    <p>知道了……就那么办吧”</p>
+    <p>“<span class="character">呜、む……是啊。如果还残留着复归的可能性，还是好的一方吗……。</span></p>
+    <p><span class="character">知道了……就那么办吧</span>”</p>
     <p>这是想到他们做过的事，就觉得很破格的温情。</p>
     <p>从现代的标准来看，本人们没有罪过却过于沉重。</p>
     <p>但是，在这个国家，玷污了王之名的罪孽是值得万死的。不是知道还是不知道的问题。</p>
