--- a/OEBPS/Text/c042.xhtml
+++ b/OEBPS/Text/c042.xhtml
@@ -111,8 +111,8 @@
     <p>有把村子，城市，国家富有的自信。那个在叫布鲁特的大城市已经实践了。</p>
     <p>他所治理的城市蓝色是全世界屈指可数的富饶城市。这虽然不能说是全部，但却是由伯尔尼哈特的手腕。</p>
     <p>而民众就是现金的东西，只要富有的话，就会返还手掌支持。</p>
-    <p>“我不知道成为王的是我，还是梅赛德斯……看见了，理想的未来。</p>
-    <p>永远无法前进的这个世界。这个我……或者说让最深色地继承我的血的人结束，然后改变我的血！”</p>
+    <p>“<span class="character">我不知道成为王的是我，还是梅赛德斯……看见了，理想的未来。</span></p>
+    <p><span class="character">永远无法前进的这个世界。这个我……或者说让最深色地继承我的血的人结束，然后改变我的血！</span>”</p>
     <p>伯恩哈特燃烧着野心，独自一人笑个不停。</p>
     <p>现在还请安静。</p>
     <p>但是，不久，那疯狂的野心之火将席卷整个世界吧。</p>
