--- a/OEBPS/Text/c043.xhtml
+++ b/OEBPS/Text/c043.xhtml
@@ -9,66 +9,66 @@
     <link href="../Styles/status.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
-    <h1>43. 魔物バトル（バトルするとは言ってない）</h1>
-    <p>王剣を巡る騒動は終わり、梅赛德斯は学園生活へと戻った。</p>
-    <p>しかし、まだ完全に学業の邪魔になる連中を排除出来たわけではない。</p>
-    <p>暗殺者連中に襲撃のタイミングを知らせていた内通者は未だ誰だか判明しておらず、不安の種が学園内に残ってしまっている。</p>
-    <p>これを見付けだして始末しない限り、本当の平穏は戻って来ないだろう。</p>
-    <p>吉克林德はこのまま城で暮らすかと思っていたが、何と彼女は己の性別と境遇を皆に明かした上で学園に留まってしまった。</p>
-    <p>これには彼女のファンだった女生徒全員が驚き、ドードに至っては失神までした。</p>
-    <p>しかし一部から『キマシタワー！』というやたらハイテンションな声があがったのが気になる。</p>
-    <p>モニカの同類だろうか？</p>
-    <p>また、吉克林德の正体判明と同時に学園の警備が強化され、常に学園内を兵士が巡回するようになった。</p>
-    <p>無論全員、ベルンハルトの息がかかった兵士だ。</p>
-    <p>梅赛德斯としては、内通者がまだ残っている上にいつ暗殺者が出るか分からない学園よりも城で吉克林德を守るべきだろうと思うのだが、これに対しベルンハルトはこう答えた。</p>
-    <p>“城にはまだ、イザークについて甘い汁を吸っていたカス共が紛れている。他国の間者も何人かいるだろう。</p>
-    <p>全て洗い出し、粛清するまでは王女を置くのはかえって危険だ。まだ学園の方がマシだろう”</p>
-    <p>要約すると、粛清の嵐を吹かして邪魔な貴族を一掃し、自分が今以上の権力を握るのに王女が邪魔だからしばらく学園に隔離したいという事だ。</p>
-    <p>この男が誰かを守るなんて目的で骨を折るものか。</p>
-    <p>その事を指摘してやると、ベルンハルトは満足そうにニヤリと笑った。</p>
-    <p>駄目だこの外道……早く何とかしないと……。</p>
-    <p>季節は巡り、夏が訪れる。</p>
-    <p>王剣を巡る騒動で暴れたのが原因なのか、最近ではやたら他の生徒が媚を売ってくるのが鬱陶しい。</p>
-    <p>梅赛德斯自身にその気が無かろうと、彼女はいまや王女を救い、偽の王家を打倒した英雄だ。</p>
-    <p>当然生徒達の興味と好奇の視線を勝ち取ってしまい、親の命令なのかそれとも本人の判断なのかは知らないが、やたら擦り寄って来る連中が増えてしまった。</p>
-    <p>“<span class="character">ねえメルちゃん、メルちゃんは狩猟祭出る？</span>”</p>
-    <p>“<span class="character">まあ、一応参加してみますが……それより何故、貴方がまだ学園にいるかが気になります、伯母様</span>”</p>
-    <p>“<span class="character">もー！敬語固いって！前までと同じで汉娜ちゃんって呼んでくれていいんだよ</span>”</p>
-    <p>“<span class="character">そうか。なら敬語は外そう、おばさん</span>”</p>
-    <p>“<span class="character">おばさん呼びはやめて！？</span>”</p>
-    <p>夏には狩猟祭というイベントがある。</p>
-    <p>それに参加するかどうかを聞いて来るのは、何故かまだ学園に留まっている汉娜・バーガー（１０７歳。子持ち）だ。</p>
-    <p>“<span class="character">で、何故まだいるんだ？</span>”</p>
-    <p>“んー……メルちゃんも言ってたでしょ？まだ内通者がいるって。</p>
-    <p>それを捕まえるのが今の私の仕事なのよ。それと王女様の護衛の指揮も私がとってるしね”</p>
-    <p>“<span class="character">……生徒に変装する必要は？</span>”</p>
-    <p>“生徒として潜入する方が近くにいれるし、色々と見えるものもあるのよ。</p>
-    <p>それに似合ってるでしょ？”</p>
-    <p>そう言い、汉娜はきゃるんとポーズを取った。</p>
-    <p>“<span class="character">無理するなおばさん</span>”</p>
+    <h1>43. 魔武战斗（不要说这是战斗）</h1>
+    <p>围绕王剑的骚动结束了，梅赛德斯回到了学园生活。</p>
+    <p>但是，还没有完全排除妨碍学业的人。</p>
+    <p>向暗杀者们通知袭击时机的内奸还没有判明是谁，校园内还残留着不安的种子。</p>
+    <p>只要不找到这个并处理好，真正的平静就不会回来吧。</p>
+    <p>原以为吉克林德就这样在城堡里生活，但她竟然在向大家说明自己的性别和境遇的基础上留在了学校。</p>
+    <p>对此，她的粉丝全体女学生都很吃惊，甚至连多德都晕倒了。</p>
+    <p>但是从一部分开始就有“奇迹塔！”这样的兴奋的声音很在意。</p>
+    <p>莫尼卡的同类吗？</p>
+    <p>同时，吉克林德的原形判明的同时学园的警备被强化，经常士兵在学园内巡回。</p>
+    <p>当然，他们都是伯恩哈德令人叹为观止的士兵。</p>
+    <p>梅赛德认为应该保护城堡里的吉克林德，而不是还有内部人员和刺客不知道什么时候的学校，但伯恩哈德回答说：..</p>
+    <p>“城堡里还夹杂着跟着伊萨克喝着甜头的卡斯们。其他国家的人也有几个吧。</p>
+    <p>在全部洗掉、肃清之前放置公主反而很危险。还是学园比较好吧</p>
+    <p>概括地说，是想吹起肃清的暴风雨扫除碍事的贵族，自己掌握现在以上的权力之前将碍事的公主暂时隔离在学园。</p>
+    <p>这家伙是在努力保护一个人吗？</p>
+    <p>当指出这一点时，伯恩哈德满意地笑了。</p>
+    <p>不行，这个外道……我得赶紧做点什么……</p>
+    <p>季节更替，夏天来了。</p>
+    <p>或许是因为剑的风波，这几天其他学生都在卖护身符，这很烦人。</p>
+    <p>她现在是拯救公主，推翻假皇室的英雄，即使她不喜欢。</p>
+    <p>当然赢得了学生们的兴趣和好奇的视线，虽然不知道是父母的命令还是本人的判断，但是胡乱靠近的人增加了。</p>
+    <p>“<span class="character">呐，梅尔，梅尔要参加狩猎祭吗？</span>”</p>
+    <p>“<span class="character">嗯，我先参加一下……比起这个，我更在意你为什么还在学校，伯母</span>”</p>
+    <p>“<span class="character">真实的！敬语很固定！和以前一样叫我汉娜就好了</span>”</p>
+    <p>“<span class="character">是吗？那我就不说敬语了，阿姨。</span>”</p>
+    <p>“<span class="character">不要叫阿姨！？</span>”</p>
+    <p>夏天有一个叫狩猎节的活动。</p>
+    <p>询问是否参加的是，不知为何还留在学校的汉娜・汉堡（107岁，有孩子）。</p>
+    <p>“<span class="character">那么，为什么还在呢？</span>”</p>
+    <p>“嗯……梅尔也说过吧？还有内奸。</p>
+    <p>抓住那个是我现在的工作。还有公主大人的护卫的指挥也是我来的”</p>
+    <p>“<span class="character">……有必要乔装成学生吗？</span>”</p>
+    <p>“作为学生潜入的人在附近，也有各种各样能看到的东西。</p>
+    <p>很适合那个吧？”</p>
+    <p>说着，汉娜摆了个姿势。</p>
+    <p>“<span class="character">不要勉强阿姨</span>”</p>
     <p>“<span class="character">！？</span>”</p>
     <p>しかしこの塩対応である。</p>
-    <p>汉娜は少し泣いた。</p>
-    <p>“<span class="character">はあー……メルちゃんって見た目は可愛らしいのに、中身は女の子版ベルンハルトって感じだよねえ。気に入られるのも分かるわ</span>”</p>
-    <p>“<span class="character">いくら気に入られようが、用が済んだら当主の座など菲利克斯に押し付けてさっさと出て行くがな</span>”</p>
-    <p>“<span class="character">菲利克斯君ねえ……まあ、真面目な子だし頑張ってはいるんだけどね</span>”</p>
-    <p>今はここにいない菲利克斯の事を思い浮かべ、汉娜は顔をしかめた。</p>
-    <p>通常、貴族の家督というものは長男が継ぐものだ。それがこの国の常識である。</p>
-    <p>しかしそこは常識など踏み越えるのが当然のベルンハルト。しきたりになど縛られない。</p>
-    <p>彼は彼自身の判断こそを最上と考えるが故に、周囲の反対も常識も無視して梅赛德斯を跡目につかせる気でいる。</p>
-    <p>汉娜はそれが分かっているからこそ、菲利克斯を不憫に思ったのだ。</p>
-    <p>“<span class="character">何か、ベルンハルトを認めさせるような手柄でも上げれば話は違うんだけどね</span>”</p>
-    <p>“<span class="character">手柄、か……</span>”</p>
-    <p>梅赛德斯としても菲利克斯がぞんざいに扱われている現状はあまりいいものではない。</p>
-    <p>可哀想だとかそういう感情は抱かないし、割とどうでもいいのだが菲利克斯が評価されないと本当にこちらに跡継ぎが押し付けられてしまう。</p>
-    <p>無論逃げるつもりではあるが、一番丸く収まるのはやはり菲利克斯に押し付けて行く事だ。</p>
-    <p>そういう点で言えば菲利克斯がある程度ベルンハルトに認められている方がいい。</p>
-    <p>しかしだからといって狩猟祭の優勝を譲ってやっても意味はないだろうし、そんな事をしても普通にベルンハルトにバレる。</p>
-    <p>それにたかが学園のイベントで一位を取ったくらいであの男が評価を変えるとも考えにくい。</p>
-    <p>もっと大きな、無視出来ない手柄をあげさせれば楽なのだが……。</p>
-    <p>“<span class="character">考えておこう</span>”</p>
-    <p>今は特にこれといって思い付かない。</p>
-    <p>梅赛德斯は話を打ち切り、机の上に羊皮紙を広げて自習にとりかかった。</p>
+    <p>汉娜有点哭了。</p>
+    <p>“<span class="character">啊……梅尔看起来很可爱，但里面却是女孩子版的伯尔恩哈特。我也知道你会喜欢的。</span>”</p>
+    <p>“<span class="character">不管你怎么喜欢，事情办完后，把当家的位子等推给菲力克斯，赶紧离开吧。</span>”</p>
+    <p>“<span class="character">菲力克斯君啊……嘛，是个认真的孩子，还在努力呢。</span>”</p>
+    <p>想起现在不在这里的菲力克斯，汉娜皱起了眉头。</p>
+    <p>通常，贵族的家督是长子继承的。这是这个国家的常识。</p>
+    <p>但是在那里超越常识是理所当然的伯恩哈特。不受常规束缚。</p>
+    <p>因为他认为他自己的判断才是最好的，所以无视周围的反对和常识，让梅赛德斯继承家业。</p>
+    <p>汉娜正因为明白这一点，才觉得菲力克斯很可怜。</p>
+    <p>“<span class="character">虽然有什么让伯尔恩哈登承认的功劳，但说起来就不一样了。</span>”</p>
+    <p>“<span class="character">功劳，嘛……</span>”</p>
+    <p>作为梅赛德斯，菲力克斯被粗暴对待的现状也不是很好。</p>
+    <p>不抱可怜之类的感情，比较无所谓，但是菲利克斯不被评价的话，真的会被推到这里继承人。</p>
+    <p>当然，我是要逃跑的，但最适合的方法是把它推到菲力克斯的事。</p>
+    <p>从这一点来说，菲利克斯在某种程度上最好被伯尔恩哈特认可。</p>
+    <p>但是即便如此，把狩猎节的冠军让给他也没有意义，即使做了那样的事也会被伯尔恩哈特发现。</p>
+    <p>而且只是在学园的活动中获得了第一名，很难想象那个男人会改变评价。</p>
+    <p>如果能让他做出更大、不能忽视的功绩就很轻松了……。</p>
+    <p>“<span class="character">考虑一下吧</span>”</p>
+    <p>我现在不能特别想到这一点。</p>
+    <p>梅赛德斯停止了谈话，在桌子上摊开羊皮纸开始自习。</p>
     <p class="divline"></p>
     <p class="divline"></p>
     <p>狩猎节前还有一个活动。</p>
