--- a/OEBPS/Text/c095.xhtml
+++ b/OEBPS/Text/c095.xhtml
@@ -119,7 +119,7 @@
     <p>……从这里开始逆转……怎么做……不行……不可能……不现实的……！</p>
     <p>刺杀菲利克斯和瓦尔堡加……不败露？潜入格鲁内瓦特的警备？</p>
     <p>怎么做？谁呢？哪里有能够实现神业的厉害手艺……）</p>
-    <p>在循环的思考中，终于找到了一个答案，那就是，除了惩罚Valbuga父子之外没有别的路可走。</p>
+    <p>在循环的思考中，终于找到了一个答案，那就是，除了惩罚Valbuga母子之外没有别的路可走。</p>
     <p>并且使那个成为可能的人……进入！</p>
     <p>但是太冒险了。因为她是个笨蛋……。</p>
     <p>手臂挺立，但脑袋真的不行……。</p>
