--- a/OEBPS/Text/c136.xhtml
+++ b/OEBPS/Text/c136.xhtml
@@ -146,7 +146,7 @@
     <p>只有武器剧烈撞击的金属声在房内回响，墙壁、地板、天花板上都刻着伤痕。</p>
     <p>可能是被卷入了战斗的桌子被两断，吊灯碎了。</p>
     <p>壶碎了，画裂了……然后，墙上有个大洞，仅仅过了一秒，剧烈的撞击声就远离了房子。</p>
-    <p>直线状的树木一个接一个地被切断，将战场移到外面的父子为了确认彼此的反应再次互相碰撞武器。</p>
+    <p>直线状的树木一个接一个地被切断，将战场移到外面的父女为了确认彼此的反应再次互相碰撞武器。</p>
     <p>打算马上进入下一个攻击的伯恩哈特的枪由于重力变得沉重，在那个间隙梅赛德斯使用全身力量的踢踢中了他的脸。</p>
     <p>伯恩哈特一边折折着树一边吹飞，比那个更快接近的梅赛德斯挥下了斧枪。</p>
     <p>但是被枪防御，被冲击飞出，伯恩哈特射出了无数的枪。</p>
