--- a/OEBPS/Text/c138.xhtml
+++ b/OEBPS/Text/c138.xhtml
@@ -45,7 +45,7 @@
     <p>“<span class="character">指挥官……？</span>”</p>
     <p>“<span class="character">魔物并不是只需要凑齐数量进行战斗就可以了，需要能自由操控的优秀指挥官。平时的话应该由迷宫主人自己来承担……但也有那个主人不能满意地指挥的时候吧。至少我在和你战斗的时候是多余的。不至于愚蠢到把意识分散在事情上让人看到破绽的程度</span>”</p>
     <p></p>
-    <p>原来如此地想着。</p>
+    <p>原来如此。</p>
     <p>确实，无论伯恩哈特多么优秀，在和梅赛德斯战斗的时候连魔物的指挥都做不到。</p>
     <p>不如说，如果做出这种模仿的话，毫无疑问会被梅赛德斯击中。</p>
     <p>正因为如此，伯恩哈特说有必要代替有事时的指挥官。</p>
@@ -88,7 +88,7 @@
     <p>从中跳出来的是伯恩哈特曾经的政敌女帝贝尔特里克斯。</p>
     <p>伯恩哈特对此也惊讶地睁大了眼睛，好像很得意似的笑了。</p>
     <p></p>
-    <p>“<span class="character">好久不见了，伯恩哈特。你们父子俩不是在吵架吗？</span>”</p>
+    <p>“<span class="character">好久不见了，伯恩哈特。你们父女俩不是在吵架吗？</span>”</p>
     <p>“<span class="character">啊，真是太开心了。那边的事情真是太无情了吧？女狐狸。</span>”</p>
     <p>“<span class="character">什么，被谁使用也不是什么坏事。如果那是能改变世界未来的优秀人才那就更好了。而且你也会马上站在同样的立场上。</span>”</p>
     <p></p>
