--- a/OEBPS/Text/c104.xhtml
+++ b/OEBPS/Text/c104.xhtml
@@ -11,11 +11,26 @@
 </head>
 
 <body>
-    <h1>104. 受理委托 “小梅尔可以攻略了” </h1>
-    <p>这是协商的结果，汉娜不情愿得出的结论。 包括汉娜自己的精锐无法攻占迷宫。 那样的话，把吉克林德和菲利克斯送出迷宫这件事本身变得困难。 到最下层的道路还需要派遣先遣队把情报带回去，这样才能比较安全的进行。</p>
-    <p>但是只有和迷宫的守护者在迷宫系统上战斗，无论如何努力都是第一次看到。 说到底，最后绝对需要“战胜初见强敌的力量”。 从这个意义上来说，被暗杀的克里斯托夫也是毫无疑问的杰出人物吧。 可是看此后目瞪口呆地被暗杀了，与守护者的战斗中负了轻伤吗？</p>
-    <p>但是，吉克林德和菲利克斯没有那种强度。 虽然那两个人都很强，但要说能战胜迷宫的守护者的程度，很遗憾胜率很低吧。 当然被选拔出来的护卫也同行,不过，把汉娜作为首的走破组不能进入。 用这个战力挑战不仅仅是攻略，失去吉克林德和菲利克斯的风险更高……汉娜是这样判断的。</p>
-    <p>这样的话至少不要交给精灵。 而汉娜所知道的最接近攻略的位置就是梅赛德斯。 因此，妥协出来的词语才是开头的一句话。 因此，汉娜平安地得到了许可的梅赛德斯（直截了当没有许可也攻略了），但她没有立即前往迷宫。 首先梅赛德斯前往的是在村子中央建造的seeker工会。</p>
+    <h1>104. 受理委托</h1>
+    <p><span class="character">“小梅尔可以攻略了” </span></p>
+    <p>这是协商的结果，汉娜不情愿得出的结论。</p>
+    <p>包括汉娜自己的精锐无法攻占迷宫。</p>
+    <p>那样的话，把吉克林德和菲利克斯送出迷宫这件事本身变得困难。</p>
+    <p>到最下层的道路还需要派遣先遣队把情报带回去，这样才能比较安全的进行。</p>
+    <p>但是只有和迷宫的守护者在迷宫系统上战斗，无论如何努力都是第一次看到。</p>
+    <p>说到底，最后绝对需要“战胜初见强敌的力量”。</p>
+    <p>从这个意义上来说，被暗杀的克里斯托夫也是毫无疑问的杰出人物吧。</p>
+    <p>可是看此后目瞪口呆地被暗杀了，与守护者的战斗中负了轻伤吗？</p>
+    <p class="divline"></p>
+    <p>但是，吉克林德和菲利克斯没有那种强度。</p>
+    <p>虽然那两个人都很强，但要说能战胜迷宫的守护者的程度，很遗憾胜率很低吧。</p>
+    <p>当然被选拔出来的护卫也同行,不过，把汉娜作为首的走破组不能进入。</p>
+    <p>用这个战力挑战不仅仅是攻略，失去吉克林德和菲利克斯的风险更高……汉娜是这样判断的。</p>
+    <p>这样的话至少不要交给精灵。</p>
+    <p>而汉娜所知道的最接近攻略的位置就是梅赛德斯。</p>
+    <p>因此，妥协出来的词语才是开头的一句话。</p>
+    <p></p>
+    <p>因此，汉娜平安地得到了许可的梅赛德斯（直截了当没有许可也攻略了），但她没有立即前往迷宫。 首先梅赛德斯前往的是在村子中央建造的seeker工会。</p>
     <p>吸血鬼和精灵是分开固定的，只有这个建筑物是共用的。 虽然精灵也有专门进行迷宫探索的职业，但特意选择同一栋建筑的理由，梅赛德斯是不知道的。 能考虑到的是互相监视，还是硬要通过在同一栋建筑物内工作来表现出表面上的友好关系呢……嗯，哪个都行。</p>
     <p>梅赛德斯来到行会的理由是为了采取单独行动。 这次，学校承认了作为特别学生有几个人来到这个村落，那里还是学生。有义务组队进行团体行动。 但是，如果像梅赛德斯那样，在已经积累了实际业绩的基础上接受行会的委托的话，就不是学生了，也可以作为救援车来行动。</p>
     <p>（只有吸血鬼啊……当然了。） 这个建筑物是精灵和吸血鬼共用的，但现在是深夜。 作为吸血鬼生活着的话快要忘记了,不过，所谓夜晚本来不是应该活动的时间带。 所以行会中只有吸血鬼，看不到精灵的身影。 反过来如果这个成为正午，这次吸血鬼的身姿消失成为只elfe吧。</p>
@@ -35,7 +50,7 @@
     <p>“<span class="character">这个委托书是精灵出的吗？</span>”</p>
     <p>“<span class="character">是的。他们把格伦萨迷宫叫做天空迷宫。我不懂你的意思。</span></p>
     <p><span class="character">所谓皮琼，是大型的鸽子的魔物。首先发现的是精灵，所以就取了这个名字</span>”</p>
-    <p>原来如此，我想。</p>
+    <p>原来如此。</p>
     <p>应该需要学习精灵语。</p>
     <p>如果语言不同，除了人名等固有名词以外，几乎是不同的。</p>
     <p>在日语中，“日本”在英语中也被称为“日本”。</p>
